<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SigninActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/textInputEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            style="@style/EditTextMaterialDesign"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/user_name"
            app:layout_constraintBottom_toTopOf="@+id/textInputEditText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText2"
            style="@style/EditTextMaterialDesign"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/materialButton"
            app:layout_constraintEnd_toEndOf="@+id/textInputEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textInputEditText"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="@dimen/margin"/>


        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintEnd_toEndOf="@+id/textInputEditText2"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText2"
            android:clickable="true"
            android:onClick="forgetPassword"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            style="@style/ButtonMaterialDesign"
            android:text="@string/sign_in"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.59000003" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/materialButton"
            app:layout_constraintStart_toStartOf="@+id/materialButton"
            app:layout_constraintTop_toBottomOf="@+id/materialButton">


            <TextView
                android:textSize="@dimen/small_text_size"
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/have_no_account" />

            <TextView
                android:textSize="@dimen/small_text_size"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:text="@string/signup_now" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <View
                android:layout_width="@dimen/line_width"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/gray" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="@dimen/small_text_size" />


            <View
                android:layout_width="@dimen/line_width"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/gray" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/using_facebook"
            style="@style/ButtonMaterialDesign"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/small_button_height"
            android:text="@string/using_facebook"
            android:textSize="@dimen/small_text_size"
            app:backgroundTint="@color/facebook_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/using_twitter"
            android:layout_marginTop="0dp"
            style="@style/ButtonMaterialDesign"
            android:layout_width="@dimen/text_input_width"
            android:layout_height="@dimen/small_button_height"
            android:text="@string/using_gmail"
            android:textSize="@dimen/small_text_size"
            app:backgroundTint="@color/gmail_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/using_facebook" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>

