<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignupActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameEditText"
            style="@style/EditTextMaterialDesign"
            android:hint="@string/user_name"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@+id/emailEditText"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            style="@style/EditTextMaterialDesign"
            android:hint="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            style="@style/EditTextMaterialDesign"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            android:textAlignment="viewStart"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEditText"
            style="@style/EditTextMaterialDesign"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/confrim_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            android:textAlignment="viewStart"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            style="@style/ButtonMaterialDesign"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
